tests/ui/parser/bare-type-in-impl-parameter.stderr
error: expected type parameter, found path `Y<A, B, C>`
  --> $DIR/bare-type-in-impl-parameter.rs:1:6
   |
LL | impl<Y<A, B, C>> Z for X<T> {}
   |      ^^^^^^^^^^
   |
help: you might have meant to bind a type parameter to a trait
   |
LL | impl<T: Y<A, B, C>> Z for X<T> {}
   |      ++
help: alternatively, you might have meant to introduce type parameter
   |
LL - impl<Y<A, B, C>> Z for X<T> {}
LL + impl<A, B, C> Z for X<T> {}
   |

error: aborting due to 1 previous error

