tests/ui/parser/bare-type-in-impl-parameter.rs
impl<Y<A, B, C>> Z for X<T> {} //~ ERROR: expected type parameter, found path `Y<A, B, C>`
